# python-metar

./: .bzrignore  .coveragerc  .gitignore  .travis.yml  .travis_coveragerc  02_Rainfall Data Demo.ipynb  CHANGELOG.md  CHANGES  LICENSE  MANIFEST  MANIFEST.in  NOTES  README  README.md  TODO  example.ipynb  execute.py  get_report.py  metar.py  parse_metar.py  pyproject.toml  sample.py  setup.cfg  setup.py  test_metar_decode.py  test_metar_decode_short.py  tester.py  tox.ini  travis.yml  wxdatatypes.py
.github/workflows/: ci.yml  release.yml
conda.recipe/dev/: meta.yaml
conda.recipe/stable/: meta.yaml
docs/: Makefile  conf.py  index.rst  make.bat
docs/_build/: .gitignore
docs/metar/: datatypes.rst  exporters.rst  graphics.rst  metar.rst  station.rst
metar/: Datatypes.py  Datatypes.pyi  Graphics.py  Metar.py  Metar.pyi  Station.py  Station.pyi  __init__.py  datatypes.py  exporters.py  graphics.py  metar.py  ncdc.py  nsd_cccc.txt  station.py
metar/data/: nsd_cccc.txt
metar/tests/: all_tests.py  exporters_tests.py  graphics_tests.py  stations_tests.py  (+6 more)
misc/: getcycle  getstation  getstation.py  getxmlobs
reference/: nsd_cccc.txt
test/: Graphics_test.py  Stations_tests.py  all_tests.py  data_for_graphics_tests.csv  graphics_test.py  stations_tests.py  test_direction.py  test_distance.py  test_metar.py  test_precipitation.py  test_pressure.py  test_speed.py  test_station.py  test_temperature.py  testfile
tests/: exporters_tests.py  graphics_tests.py  stations_tests.py  test_direction.py  test_distance.py  test_metar.py  test_speed.py  test_temperature.py
(+2 files in other folders)
